chore: convert Delivery to record